Prevent page scrolling on iOS in panel menus

--- a/source/styles/modules/menus/panel.styl
+++ b/source/styles/modules/menus/panel.styl
@@ -49,6 +49,6 @@
 	#app .menus.panel
 		background-color transparent
 		width 100%
-		> .article
+		> article
 			> .content
-				min-height 100%
+				min-height calc(100% \+ 1px)
